--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
   - python setup.py install
 
 script:
-  - python runtests.py -v
+  - mypy --strict-optional test-data/samples/yield-generator.py
